// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCAssessment adapter can be constructed WITH attributes 1`] = `
Object {
  "modelState": Object {
    "correctFeedbacks": "Correct!|Great job!",
    "incorrectfeedbacks": "",
    "responseType": "pick-one",
  },
}
`;

exports[`MCAssessment adapter can be constructed WITHOUT attributes 1`] = `
Object {
  "modelState": Object {
    "correctFeedbacks": "",
    "incorrectFeedbacks": "",
    "responseType": "",
  },
}
`;

exports[`MCAssessment adapter can convert to JSON 1`] = `
Object {
  "content": Object {
    "responseType": "pick-one",
  },
}
`;
